[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/state_machines/BossColorState.gd" type="Script" id=1]
[ext_resource path="res://scripts/state_machines/BossStateMachine.gd" type="Script" id=2]
[ext_resource path="res://scripts/kinematicBodies/Boss.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 172.0

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="DroneStateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ColorState" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="DetectionRay" type="RayCast2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="OrangeMain" type="Timer" parent="Timers"]
